developer/src/kmc-package/test/fixtures/invalid/hint_js_keyboard_file_has_no_touch_targets.kmn
store(&name) 'hint_js_keyboard_file_has_no_touch_targets'
store(&keyboardversion) '1.0'
store(&targets) 'web'

begin unicode > use(main)

group(main) using keys